Feature: Primer Lanzamiento

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta property="og:image" content="https://reconvierteme.firebaseapp.com/assets/OG_IMAGE.png">
+  <meta property="og:url" content="https://reconvierteme.firebaseapp.com">
+  <meta property="og:description" content="Calculadora de Reconversión Monetaria">
   <title>Reconvierteme</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
